edit section about

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
         <p class="mini-about">
           I design and build beautiful websites for businesses around the globe.
-          For a modern website, send me an email, and If we are a good fit, I
-          will give you a time and cost estimate.
+          If you need a modern and powerful website, send me an email. If we are
+          a good fit, I will give you a time and cost estimate.
         </p>
         <a
           href="mailto:christianah123.ac@gmail.com?subject=I have a job for you&body=Some body text here"
