--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
       </ul>
-      <button class="contact-button">Let's Talk</button>
+      <a href="" class="contact-button">Let's Talk</a>
     </nav>
 
     <section class="hero-section" id="home">
@@ -160,7 +160,9 @@
             <a href="https://chris1-web.github.io/instagram/" target="_blank"
               >Live Preview</a
             >
-            <a href="">Github</a>
+            <a href="https://github.com/Chris1-web/instagram" target="_blank"
+              >Github</a
+            >
           </div>
         </div>
       </article>
@@ -180,10 +182,16 @@
             <li>React</li>
           </ul>
           <div class="buttons">
-            <a href="https://chris1-web.github.io/shopping-cart/"
+            <a
+              href="https://chris1-web.github.io/shopping-cart/"
+              target="_blank"
               >Live Preview</a
             >
-            <a href="">Github</a>
+            <a
+              href="https://github.com/Chris1-web/shopping-cart"
+              target="_blank"
+              >Github</a
+            >
           </div>
         </div>
         <div class="image-container">
@@ -228,7 +236,9 @@
             <a href="https://chris1-web.github.io/library/" target="_blank"
               >Live Preview</a
             >
-            <a href="">Github</a>
+            <a href="https://github.com/Chris1-web/library" target="_blank"
+              >Github</a
+            >
           </div>
         </div>
       </article>
