made links underline on hover

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <li><a href="#about">About</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
       </ul>
-      <a href="" class="contact-button">Let's Talk</a>
+      <a
+        href="mailto:christianah123.ac@gmail.com?subject=I%20have%20a%20job%20for%20you&body=Some%20body%20text%20here"
+        class="contact-button"
+        >Let's Talk</a
+      >
     </nav>
 
     <section class="hero-section" id="home">
