--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       >
         <img src="./images/mail-bulk.png" alt="mail link" />
       </a>
-      <a href="https://github.com/Chris1-web"
+      <a href="https://github.com/Chris1-web" target="_blank"
         ><img src="./images/instagram.png" alt="instagram link"
       /></a>
-      <a href="https://github.com/Chris1-web"
+      <a href="https://github.com/Chris1-web" target="_blank"
         ><img src="./images/github.png" alt="github link"
       /></a>
-      <a href="https://twitter.com/Scripts40"
+      <a href="https://twitter.com/Scripts40" target="_blank"
         ><img src="./images/twitter.png" alt="twitter link"
       /></a>
       <div class="decorative-line"></div>
@@ -255,59 +255,28 @@
       >
     </section>
 
-    <footer>
-      <div class="left">
-        <h3>
-          Let’s make something amazing <br />
-          together.
-        </h3>
-        <h5>Email me directly at hello@email.com</h5>
-        <div class="copyright">
-          <div class="name">christianah.</div>
-          <img src="./images/copyright.png" alt="copyright" />
-          <span>2022. All Rights Reserved </span>
-        </div>
+    <footer class="footer container">
+      <div class="copyright-container">
+        <img src="./images/copyright.png" />
+        <p>2022 christianah. All Rights Reserved</p>
       </div>
-      <div class="right">
-        <div class="links">
-          <div class="line"></div>
-          <ul class="links-list">
-            <li>
-              <a href="#home">home</a>
-            </li>
-            <li>
-              <a href="#home">about</a>
-            </li>
-            <li>
-              <a href="#home">portfolio</a>
-            </li>
-          </ul>
-        </div>
-        <div class="links">
-          <div class="line"></div>
-          <ul>
-            <li>
-              <a href="" target="_blank">
-                <img src="./images/mailFooter.png" alt="Mail" />
-              </a>
-            </li>
-            <li>
-              <a href="" target="_blank">
-                <img src="./images/instagramFooter.png" alt="Mail" />
-              </a>
-            </li>
-            <li>
-              <a href="" target="_blank">
-                <img src="./images/githubFooter.png" alt="Mail" />
-              </a>
-            </li>
-            <li>
-              <a href="" target="_blank">
-                <img src="./images/twitterFooter.png" alt="Mail" />
-              </a>
-            </li>
-          </ul>
-        </div>
+      <div class="email-container"><p>christianah123.ac@gmail.com</p></div>
+      <div class="social-media-footer">
+        <a
+          href="mailto:christianah123.ac@gmail.com?subject=I%20have%20a%20job%20for%20you&body=Some%20body%20text%20here"
+          target="_blank"
+        >
+          <img src="./images/mail-bulk.png" alt="email" />
+        </a>
+        <a href="" target="_blank">
+          <img src="./images/instagram.png" alt="instagram" />
+        </a>
+        <a href="https://github.com/Chris1-web" target="_blank">
+          <img src="./images/github.png" alt="github" />
+        </a>
+        <a href="https://twitter.com/Scripts40" target="_blank">
+          <img src="./images/twitter.png" alt="twitter" />
+        </a>
       </div>
     </footer>
   </body>
