create handburger menu

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="./query.css" />
+    <script src="./script.js" defer></script>
     <title>
       Christianah Adeyemo - Frontend Website Developer, Website Designer
     </title>
   </head>
   <body>
+    <aside class="mobile-nav-container"></aside>
+    <aside class="mobile-nav-container left"></aside>
+
     <nav class="navigation container">
       <h1 class="logo">christianah<span>.</span></h1>
       <ul class="middle-nav">
@@ -23,6 +27,11 @@
         class="contact-button"
         >Let's Talk</a
       >
+      <div class="handburger-menu">
+        <div class="top"></div>
+        <div class="middle"></div>
+        <div class="bottom"></div>
+      </div>
     </nav>
 
     <section class="hero-section" id="home">
