--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <aside class="mobile-nav-container"></aside>
-    <aside class="mobile-nav-container left"></aside>
+    <!-- <aside class="mobile-nav-container left"></aside> -->
 
     <nav class="navigation container">
       <h1 class="logo">christianah<span>.</span></h1>
