update about me section with text

--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@
     <section class="about-me container" id="about">
       <h5>About Me.</h5>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing
-        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-        ut aliquip ex ea commodo consequat.
+        With an addiction to continuous learning, I seek out challenges that are
+        meaningful to me. In this, I discovered my love of creating user
+        friendly interface, resolving design problems, and developing rich web
+        applications. I have been able to make this possible with design
+        principles and programming languages notably Javascript. I love studying
+        new technologies, coding, and building projects often, and I look
+        forward to gaining hands-on experience in website development related
+        companies.
       </p>
     </section>
 
