update about me section with text

--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
     <section class="about-me container" id="about">
       <h5>About Me.</h5>
       <p>
-        With an addiction to continuous learning, I seek out challenges that are
-        meaningful to me. In this, I discovered my love of creating user
-        friendly interface, resolving design problems, and developing rich web
-        applications. I have been able to make this possible with design
-        principles and programming languages notably Javascript. I love studying
-        new technologies, coding, and building projects often, and I look
-        forward to gaining hands-on experience in website development related
-        companies.
+        My web development journey started in 2020, when I picked up HTML.
+        However, after a while, the learning fizzled out. In 2021, I began
+        studying Python. This experience would turn out to be the same as HTML.
+        In January, 2022. I made a commitment to learn the fundamental tools
+        needed for Frontend Development. While learning, I discovered my love of
+        creating user friendly interface, resolving design problems, and
+        developing rich web application. Now, I look forward to gaining hands-on
+        experience in website development related companies.
       </p>
     </section>
 
