replace all Lorem texts with real texts

--- a/index.html
+++ b/index.html
@@ -158,9 +158,10 @@
         <div class="project-information">
           <h2>Instagram Clone</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua
+            I was doubtful about starting this project, as it would be the first
+            time I would use React alongside Firebase. I also used plain CSS
+            which I later regretted. I learnt the hard way that for large
+            projects, SASS would have been a better option.
           </p>
           <h4>Technologies</h4>
           <ul>
@@ -184,9 +185,10 @@
         <div class="project-information">
           <h2>Shopping Cart</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua
+            This project was to practice React Router. It was also the project
+            where I learnt separation of concerns by keeping the components and
+            pages in different folders. This would prove useful in future
+            projects
           </p>
           <h4>Technologies</h4>
           <ul>
@@ -234,9 +236,10 @@
         <div class="project-information">
           <h2>Library</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua
+            My first Firebase project. This project was created without a
+            backend, so inputted data is lost after a page refresh. However,
+            with the integration of Firebase came with the option to either
+            store the data after signing in or not.
           </p>
           <h4>Technologies</h4>
           <ul>
