correct typographical error

--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
         <div class="project-information">
           <h2>Instagram Clone</h2>
           <p>
-            I was doubtful about starting this project, as it would be the first
-            time I would use React alongside Firebase. I also used plain CSS
-            which I later regretted. I learnt the hard way that for large
-            projects, SASS would have been a better option.
+            I was doubtful about this project, as it would be the first time I
+            would use React alongside Firebase. I also used plain CSS which I
+            later regretted. I learnt the hard way that for large projects, SASS
+            would have been a better option.
           </p>
           <h4>Technologies</h4>
           <ul>
@@ -238,8 +238,8 @@
           <p>
             My first Firebase project. This project was created without a
             backend, so inputted data is lost after a page refresh. However,
-            with the integration of Firebase came with the option to either
-            store the data after signing in or not.
+            with the integration of Firebase came the option to either store the
+            data after signing in or not.
           </p>
           <h4>Technologies</h4>
           <ul>
