change personal email to professional email

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
       </ul>
-      <a
-        href="mailto:christianah123.ac@gmail.com?subject=I%20have%20a%20job%20for%20you&body=Some%20body%20text%20here"
-        class="contact-button"
+      <a href="mailto:christianah@christianah.space" class="contact-button"
         >Let's Talk</a
       >
       <div class="handburger-menu">
@@ -44,9 +42,7 @@
           If you need a modern and powerful website, send me an email. If we are
           a good fit, I will give you a time and cost estimate.
         </p>
-        <a
-          href="mailto:christianah123.ac@gmail.com?subject=I have a job for you&body=Some body text here"
-          class="hire-me-button"
+        <a href="mailto:christianah@christianah.space" class="hire-me-button"
           >Hire Me</a
         >
       </div>
@@ -59,9 +55,7 @@
     </section>
 
     <aside class="social-contacts container">
-      <a
-        href="mailto:christianah123.ac@gmail.com?subject=I have a job for you&body=Some body text here"
-      >
+      <a href="mailto:christianah@christianah.space">
         <img src="./images/mail-bulk.png" alt="mail link" />
       </a>
       <a href="https://github.com/Chris1-web" target="_blank"
@@ -273,12 +267,9 @@
         <img src="./images/copyright.png" />
         <p>2022 christianah. All Rights Reserved</p>
       </div>
-      <div class="email-container"><p>christianah123.ac@gmail.com</p></div>
+      <div class="email-container"><p>christianah@christianah.space</p></div>
       <div class="social-media-footer">
-        <a
-          href="mailto:christianah123.ac@gmail.com?subject=I%20have%20a%20job%20for%20you&body=Some%20body%20text%20here"
-          target="_blank"
-        >
+        <a href="mailto:christianah@christianah.space" target="_blank">
           <img src="./images/mail-bulk.png" alt="email" />
         </a>
         <a href="" target="_blank">
