--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
         In January, 2022. I made a commitment to learn the fundamental tools
         needed for Frontend Development. While learning, I discovered my love of
         creating user friendly interface, resolving design problems, and
-        developing rich web application. Now, I look forward to gaining hands-on
-        experience in website development related companies.
+        developing rich web application.
       </p>
     </section>
 
