--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
           <h1>Frontend Web Designer & Developer</h1>
         </div>
         <p class="mini-about">
-          I design and build beautiful websites for businesses around the globe.
-          If you need a modern and powerful website, send me an email. If we are
-          a good fit, I will give you a time and cost estimate.
+          Former Cashier turned self taught developer looking for an opportunity to use my skills in the Tech Industry.
         </p>
-        <a href="mailto:christianah@christianah.space" class="hire-me-button"
+<!--         <a href="mailto:christianah@christianah.space" class="hire-me-button"
           >Hire Me</a
-        >
+        > -->
       </div>
       <div class="right">
         <img
