complete renewed desktop version

--- a/index.html
+++ b/index.html
@@ -18,15 +18,6 @@
     <nav class="navigation container">
       <h1 class="logo">christianah<span>.</span></h1>
 
-      <!-- <ul class="middle-nav">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-      </ul> -->
-      <!-- <a href="mailto:christianah@christianah.space" class="contact-button"
-        >Let's Talk</a
-      > -->
-      <!-- <p>Hello</p> -->
       <ul class="right-nav">
         <a href="https://github.com/Chris1-web" target="_blank"
           ><img src="./images/instagram.png" alt="instagram link"
@@ -34,19 +25,10 @@
         <a href="https://github.com/Chris1-web" target="_blank"
           ><img src="./images/github.png" alt="github link"
         /></a>
-        <a href="https://twitter.com/Scripts40" target="_blank"
+        <a href="https://twitter.com/_thesenator" target="_blank"
           ><img src="./images/twitter.png" alt="twitter link"
         /></a>
       </ul>
-      <!-- <div class="decorative-line"></div> -->
-      <!-- <a href="mailto:christianah@christianah.space" class="contact-button"
-        >Let's Talk</a
-      > -->
-      <div class="handburger-menu">
-        <div class="top"></div>
-        <div class="middle"></div>
-        <div class="bottom"></div>
-      </div>
     </nav>
 
     <section class="hero-section" id="home">
@@ -65,44 +47,6 @@
       </div>
     </section>
 
-    <!-- <section class="hero-section" id="home">
-      <div class="left">
-        <p class="greeting">Hi, I'm Christianah,</p>
-        <div class="front-end-container">
-          <h1>Frontend Web Designer & Developer</h1>
-        </div>
-        <p class="mini-about">
-          Former Cashier turned self taught developer looking for an opportunity
-          to use my skills in the Tech Industry.
-        </p> -->
-    <!--         <a href="mailto:christianah@christianah.space" class="hire-me-button"
-          >Hire Me</a
-        > -->
-    <!-- </div>
-      <div class="right">
-        <img
-          src="./images/christianah.png"
-          alt="Christianah's animated image"
-        />
-      </div>
-    </section> -->
-
-    <!-- <aside class="social-contacts container">
-      <a href="mailto:christianah@christianah.space">
-        <img src="./images/mail-bulk.png" alt="mail link" />
-      </a>
-      <a href="https://github.com/Chris1-web" target="_blank"
-        ><img src="./images/instagram.png" alt="instagram link"
-      /></a>
-      <a href="https://github.com/Chris1-web" target="_blank"
-        ><img src="./images/github.png" alt="github link"
-      /></a>
-      <a href="https://twitter.com/Scripts40" target="_blank"
-        ><img src="./images/twitter.png" alt="twitter link"
-      /></a>
-      <div class="decorative-line"></div>
-    </aside> -->
-
     <section class="about-me container" id="about">
       <img src="./images/picture.jpeg" alt="personal picture" />
       <div class="about-me-container">
@@ -114,7 +58,8 @@
           Information Technology and looking for an opportunity to intern in a
           tech-driven environment.
         </p>
-        <button>Resume</button>
+        <!-- <button>Resume</button> -->
+        <a href="./images/resume.pdf" target="_blank">Resume</a>
       </div>
     </section>
 
@@ -283,52 +228,6 @@
           ></path>
         </svg>
       </div>
-      <!-- <div class="tools-container">
-        <div class="top-tools">
-          <div>
-            <img src="./images/html5.png" alt="html5" />
-            <p>HTML</p>
-          </div>
-          <div>
-            <img src="./images/css3-alt.png" alt="css" />
-            <p>CSS</p>
-          </div>
-          <div>
-            <img src="./images/js-square.png" alt="javascript" />
-            <p>Javascript</p>
-          </div>
-          <div>
-            <img src="./images/react.png" alt="react" />
-            <p>React</p>
-          </div>
-          <div>
-            <img src="./images/sass.png" alt="sass" />
-            <p>SASS</p>
-          </div>
-        </div>
-        <div class="bottom-tools">
-          <div>
-            <img src="./images/firebase.png" alt="firebase" class="firebase" />
-            <p>Firebase</p>
-          </div>
-          <div>
-            <img src="./images/githubColored.png" alt="github" />
-            <p>github</p>
-          </div>
-          <div>
-            <img src="./images/git.png" alt="git" />
-            <p>git</p>
-          </div>
-          <div>
-            <img src="./images/jest.png" alt="jest" />
-            <p>jest</p>
-          </div>
-          <div>
-            <img src="./images/webpack.png" alt="webpack" />
-            <p>webpack</p>
-          </div>
-        </div>
-      </div> -->
     </section>
 
     <section class="portfolio container" id="portfolio">
@@ -391,10 +290,10 @@
             <li>Firebase</li>
           </ul>
           <div class="buttons">
-            <a href="https://chris1-web.github.io/instagram/" target="_blank"
+            <a href="https://chris1-web.github.io/library/" target="_blank"
               >Live Preview</a
             >
-            <a href="https://github.com/Chris1-web/instagram" target="_blank"
+            <a href="https://github.com/Chris1-web/library" target="_blank"
               >Github</a
             >
           </div>
@@ -410,28 +309,31 @@
         </div>
       </article>
 
-      <article>
+      <article id="exclusive">
         <div class="project-information">
           <h2>Exclusive Club</h2>
           <p>
-            My first Firebase project. This project was created without a
-            backend, so data is lost after a page refresh. However, with the
-            integration of Firebase came the option to either store the data
-            after signing in or not.
+            My First project to learn authentication and authorization. This app
+            allows non-authenicated users to view messages but not their
+            authors. However, members can create new messages and view message
+            authors.
           </p>
           <h4>Technologies</h4>
           <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Webpack</li>
-            <li>Firebase</li>
+            <li>NodeJS</li>
+            <li>ExpressJS</li>
+            <li>MongoDB</li>
+            <li>PassportJS</li>
+            <li>Pug</li>
+            <li>BcryptJS</li>
           </ul>
           <div class="buttons">
-            <a href="https://chris1-web.github.io/instagram/" target="_blank"
+            <a href="https://the-exclusive-club.onrender.com" target="_blank"
               >Live Preview</a
             >
-            <a href="https://github.com/Chris1-web/instagram" target="_blank"
+            <a
+              href="https://github.com/Chris1-web/the_exclusive_club"
+              target="_blank"
               >Github</a
             >
           </div>
@@ -451,24 +353,25 @@
         <div class="project-information">
           <h2>Blog API</h2>
           <p>
-            My first Firebase project. This project was created without a
-            backend, so data is lost after a page refresh. However, with the
-            integration of Firebase came the option to either store the data
-            after signing in or not.
+            This is an API only application that can only be accessed through an
+            API platform, such as Postman. The details of each route is
+            documented on its GitHub ReadME file. All routes except the sign up
+            and login page require an authentication token to be access. An
+            authentication token can be generated through the login page.
           </p>
           <h4>Technologies</h4>
           <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Webpack</li>
-            <li>Firebase</li>
+            <li>NodeJS</li>
+            <li>ExpressJS</li>
+            <li>MongoDB</li>
+            <li>BcryptJS</li>
+            <li>JSONWebToken</li>
           </ul>
           <div class="buttons">
-            <a href="https://chris1-web.github.io/instagram/" target="_blank"
+            <a href="https://github.com/Chris1-web/blog_api" target="_blank"
               >Live Preview</a
             >
-            <a href="https://github.com/Chris1-web/instagram" target="_blank"
+            <a href="https://github.com/Chris1-web/blog_api" target="_blank"
               >Github</a
             >
           </div>
@@ -494,7 +397,7 @@
 
     <section class="final-contact">
       <h2>Now Say Hi</h2>
-      <button>Send Message</button>
+      <a href="https://twitter.com/_thesenator" target="_blank">Send Message</a>
     </section>
 
     <footer class="footer container">
@@ -510,7 +413,7 @@
         <a href="https://github.com/Chris1-web" target="_blank">
           <img src="./images/github.png" alt="github" />
         </a>
-        <a href="https://twitter.com/Scripts40" target="_blank">
+        <a href="https://twitter.com/_thesenator" target="_blank">
           <img src="./images/twitter.png" alt="twitter" />
         </a>
       </div>
