--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ul>
     </nav>
 
-    <section class="hero-section" id="home">
+    <section class="hero-section container" id="home">
       <div class="top">
         <img
           src="./images/christianah.png"
